# yttrium

./: .codeqlignore  .dockerignore  .env.template  .gitignore  .gitmodules  .jitpack.yml  AGENTS.md  Cargo.toml  Makefile  Package.swift  README.md  TROUBLESHOOTING.md  YttriumUtilsWrapper.podspec  YttriumWrapper.podspec  benchmark-profile-output-sizes.sh  benchmark.sh  build-kotlin.sh  build-swift.sh  build-wasm.sh  build.gradle  create-stacked-pr.sh  generate_kotlin_locally.sh  gradle.properties  jitpack.yml  justfile  rustfmt.toml  settings.gradle
.cargo/: audit.toml  config.toml
crates/dart-ffi/: Cargo.toml  build.rs.bkp  flutter_rust_bridge.yaml  generate_bindings.sh  pubspec.yaml  pubspec.yaml.bkp
crates/dart-ffi/assets/: libyttrium_dart.dylib
crates/dart-ffi/example/: dart_ffi_example.dart
crates/dart-ffi/lib/: dart_ffi.dart
crates/dart-ffi/rust/: Cargo.toml
crates/dart-ffi/rust/src/: account_client.rs  account_client_eip7702.rs  bridge_generated.rs  chain_abstraction_client.rs  config.rs  erc6492_client.rs  error.rs  lib.rs
crates/dart-ffi/src/: lib.rs
crates/dart-ffi/test/: dart_ffi_test.dart
crates/ffi/: .gitignore  Cargo.toml  build-rust-ios-release.sh  build-rust-ios.sh  build-rust.sh  build.rs
crates/ffi/YttriumCore/: Package.swift
crates/ffi/YttriumCore/Sources/YttriumCore/: AccountClient.swift  AccountClient7702.swift  AccountClientProtocol.swift  ChainAbstractionClient.swift  ChainAbstractionTypes.swift  Config.swift  FFIUserOperationReceipt.swift  ffi.swift
crates/ffi/YttriumCore/Tests/: AccountClientTests.swift  SimpleAccountClientTests.swift
crates/ffi/src/: account_client.rs  account_client_eip7702.rs  chain_abstraction_client.rs  config.rs  erc6492_client.rs  error.rs  lib.rs  log.rs
crates/kotlin-ffi/: Cargo.toml  build.rs  proguard-rules.pro  uniffi-bindgen.rs  uniffi.toml
crates/kotlin-ffi/android/: .gitignore  build.gradle  gradle.properties  proguard-rules-wcpay.pro  settings.gradle
crates/kotlin-ffi/android/src/: build.gradle
crates/kotlin-ffi/android/yttrium/: build.gradle
crates/kotlin-ffi/android/yttrium-utils/: build.gradle
crates/kotlin-ffi/android/yttrium-wcpay/: build.gradle
crates/kotlin-ffi/src/: account_client.udl  lib.rs  yttrium.udl
crates/pay-api/: Cargo.toml
crates/pay-api/docs/: create_payment.md  envelope.md  get_payment.md  get_payment_status.md
crates/pay-api/src/: envelope.rs  errors.rs  lib.rs  tests.rs
crates/pay-api/src/bodies/: confirm_payment.rs  create_payment.rs  get_payment.rs  get_payment_status.rs  mod.rs
crates/rust-sample-wallet/: .gitignore  .project-id  Cargo.toml  README.md  package-lock.json  package.json  playwright.config.ts
crates/rust-sample-wallet/src/: app.rs  main.rs  toast.rs
crates/rust-sample-wallet/tests/: rust-app-react-wallet.spec.ts  self-connect.spec.ts  walletkit.spec.ts
crates/yttrium/: .gitignore  Cargo.toml  build.rs
crates/yttrium/contracts/: Account7702.sol
crates/yttrium/src/: account_client.rs  blockchain_api.rs  bundler.rs  call.rs  chain.rs  config.rs  eip7702.rs  entry_point.rs  erc20.rs  erc6492_client.rs  error.rs  execution.rs  frb_generated.rs  jsonrpc.rs  lib.rs  private_key_service.rs  provider_pool.rs  pulse.rs  serde.rs  sign_service.rs  signer.rs  smart_accounts.rs  spawn.rs  stacks_provider.rs  test_helpers.rs  time.rs  ton_provider.rs  transaction.rs  uniffi_compat.rs  user_operation.rs  utils.rs  version.rs  wallet_pay.rs  wallet_provider.rs  wallet_service_api.rs  wasm_compat.rs  wasm_compat.ts
crates/yttrium/src/bundler/: client.rs  config.rs  models.rs  pimlico.rs
crates/yttrium/src/bundler/models/: estimate_result.rs  user_operation_receipt.rs
crates/yttrium/src/bundler/pimlico/: client.rs  gas_price.rs
crates/yttrium/src/call/: send.rs
crates/yttrium/src/call/send/: safe_test.rs
crates/yttrium/src/chain_abstraction/: amount.rs  client.rs  currency.rs  dart_compat.rs  dart_compat_models.rs  error.rs  l1_data_fee.rs  local_fee_acc.rs  mod.rs  pulse.rs  route_ui_fields.rs  send_transaction.rs  test_helpers.rs  tests.rs  ui_fields.rs
crates/yttrium/src/clear_signing/: descriptor.rs  eip712.rs  engine.rs  mod.rs  resolver.rs  token_registry.rs
crates/yttrium/src/descriptors/: aave.rs  mod.rs
crates/yttrium/src/eip7702/: account_client.rs
crates/yttrium/src/entry_point/: get_sender_address.rs
crates/yttrium/src/erc4337/: mod.rs
crates/yttrium/src/erc7579/: addresses.rs  mod.rs  module.rs  ownable_validator.rs  policy.rs  smart_sessions.rs
crates/yttrium/src/examples/: eip7702.rs  eip7702_smart_sessions.rs  mod.rs
crates/yttrium/src/execution/: send.rs
crates/yttrium/src/gas_abstraction/: README.md  mod.rs  tests.rs
crates/yttrium/src/pay/: e2e_tests.rs  error_reporting.rs  generated.rs  json.rs  mod.rs  observability.rs  openapi-staging.json  openapi.json  serde_enums.rs
crates/yttrium/src/resolver/: local_resolver.rs  mod.rs
crates/yttrium/src/sign/: client.rs  client_errors.rs  client_types.rs  envelope_type0.rs  envelope_type1.rs  expiry.rs  ffi_types.rs  incoming.rs  mapper.rs  mod.rs  pairing_uri.rs  priority_future.rs  protocol_types.rs  pulse.rs  readme.md  relay.rs  relay_url.rs  serialization.rs  storage.rs  tests.rs  utils.rs  verify-public.jwk  verify.rs  verify_attestation.rs
crates/yttrium/src/smart_accounts/: account_address.rs  deployed.rs  nonce.rs  safe.rs  simple_account.rs
crates/yttrium/src/test_helpers/: mod.rs
crates/yttrium/src/transaction/: send.rs
crates/yttrium/src/transaction_sponsorship/: error.rs  mod.rs  tests.rs
crates/yttrium/src/uniffi_compat/: evm_signing.rs  log.rs  mod.rs  stacks.rs  sui.rs  ton.rs  tron.rs
crates/yttrium/src/user_operation/: hash.rs  user_operation_hash.rs
crates/yttrium/tests/: aave_lpv2.rs  aave_weth_gateway_v3.rs  clear_signing.rs  kms_compat.rs  session_extend.rs  sign_client_decode.rs  test_send_transaction.rs  tether.rs  ton_address_format.rs
crates/yttrium/tests/fixtures/: stake_weight_descriptor.json  token_registry.json
crates/yttrium_dart/rust/: Cargo.toml
crates/yttrium_dart/rust/src/: frb_generated.rs  lib.rs
(+253 files in other folders)
