[workspace]
members = ["crates/kotlin-ffi", "crates/yttrium", "crates/yttrium_dart/rust"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
license = "Apache-2.0"

[workspace.dependencies]
# Errors/Result
eyre = { version = "0.6.12", features = ["default"], default-features = false }
thiserror = { version = "1.0", default-features = false }

# Async
tokio = { version = "1.44", default-features = false }
futures = { version = "0.3.31", default-features = false }

wasmtimer = { version = "0.4.1", default-features = false, features = [
    "tokio",
] }

# Networking
reqwest = { version = "0.12.5", features = ["json"], default-features = false }
url = { version = "2.5.4", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false }

# Logging
oslog = { version = "0.2.0", default-features = false }
log = { version = "0.4.20", default-features = false }

alloy = { version = "0.11.1", default-features = false }
alloy-provider = { version = "0.11.1", default-features = false }
erc6492 = { git = "https://github.com/reown-com/erc6492.git", branch = "chore/bump-alloy", default-features = false }
relay_rpc = { git = "https://github.com/WalletConnect/WalletConnectRust.git", rev = "51e984e", default-features = false }

serial_test = { version = "3.2.0", default-features = false }

uniffi_build = { version = "0.29", default-features = false }
uniffi = { version = "0.29", default-features = false, features = ["tokio"] }
uniffi_macros = { version = "0.29", default-features = false }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
tsify-next = "0.5.4"

# Solana
solana-sdk = { version = "2.2.2", default-features = false }
solana-client = { version = "2.2.7", default-features = false }
solana-seed-phrase = { version = "2.2.1", default-features = false }
spl-token = { version = "8.0.0", default-features = false }
spl-associated-token-account = { version = "7.0.0", default-features = false }
bincode = { version = "1.3.3", default-features = false }
data-encoding = { version = "2.9.0", default-features = false }
# Pin quinn to fix rustls-platform-verifier issue: https://github.com/rustls/rustls-platform-verifier/issues/164#issuecomment-2732380093
quinn = { version = "0.11.8", default-features = false }
const_format = { version = "0.2.34", default-features = false }

# SUI
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk", default-features = false }
sui_types = { git = "https://github.com/mystenlabs/sui", package = "sui-types", default-features = false }
sui_keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys", default-features = false }
sui_shared_crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto", default-features = false }
# https://github.com/MystenLabs/sui/blob/7214872434b3b0578fccc4d3e468371855a4ecf8/Cargo.toml#L624C1-L624C116
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9", default-features = false }
rand = { version = "0.8.5", default-features = false }

# Used by WASM ONLY, since wasm-pack doesn't support custom profiles
# https://github.com/rustwasm/wasm-pack/issues/1461
[profile.release]
lto = true        # Seems to make it slightly larger actually
opt-level = 'z'
codegen-units = 1
strip = true

# Default according to https://doc.rust-lang.org/cargo/reference/profiles.html#release
# We would inherit from the real release profile, but wasm-pack needs to use this above and we need to customize it
[profile.release-base]
inherits = "release"
opt-level = 3
debug = false
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.kotlin-release-next]
inherits = "profile10-nostrip"

[profile.swift-release-next]
inherits = "profile9"

# [profile.wasm-release-next]
# inherits = "profile10-nostrip"

# For building release-optimized binaries for UniFFI bindings
[profile.uniffi-release]
inherits = "uniffi-release-v1"

[profile.uniffi-release-v2] # Simply turns off debugging
inherits = "uniffi-release-v1"
debug = false

# TODO: consider more profiles for Kotlin vs Swift, and for Flutter, etc.

[profile.uniffi-release-v1]
# The values have been configured this way to prevent crashes in Swift debug builds with the default settings.
inherits = "release-base"
debug = true
lto = true
opt-level = 0
codegen-units = 1
# panic = "abort"
# strip = true - it removes kotlin-bindings

# What we should aim for short-term
[profile.uniffi-release-next]
inherits = "profile8"
# profile7-nightly-stdopt

[profile.uniffi-release-kotlin]
inherits = "profile11"

[profile.uniffi-release-swift]
inherits = "profile9"

[profile.uniffi-release-iter1] # first iteration, changes opt-level to 3
inherits = "release-base"
debug = true
lto = true
opt-level = 3
codegen-units = 1

[profile.uniffi-release-iter2] # same as profile6
inherits = "release-base"
lto = true
opt-level = 3
codegen-units = 1

[profile.uniffi-release-iter3] # same as profile7
inherits = "release-base"
lto = true
opt-level = 3
codegen-units = 1
strip = true

[profile.uniffi-release-iter4]
inherits = "release-base"
lto = true
opt-level = 3
codegen-units = 1
strip = true
# profile7-nightly

[profile.uniffi-release-iter5]
inherits = "release-base"
lto = true
opt-level = 3
codegen-units = 1
strip = true
# profile7-nightly-stdopt

[profile.profile1]
inherits = "release-base"
debug = true
opt-level = 0

[profile.profile2]
inherits = "release-base"
opt-level = 0

[profile.profile21]
inherits = "release-base"
opt-level = 1

[profile.profile22]
inherits = "release-base"
opt-level = 2

[profile.profile3]
inherits = "release-base"
opt-level = 3

[profile.profile4]
inherits = "release-base"
opt-level = "z"

[profile.profile5]
inherits = "release-base"
opt-level = 3
codegen-units = 1

[profile.profile6]
inherits = "release-base"
opt-level = 3
codegen-units = 1
lto = true

[profile.profile7]
inherits = "release-base"
opt-level = 3
codegen-units = 1
lto = true
strip = true

[profile.profile8]
inherits = "release-base"
opt-level = 3
codegen-units = 1
lto = true
panic = "abort"

[profile.profile9]
inherits = "release-base"
opt-level = 3
codegen-units = 1
lto = true
strip = true
panic = "abort"

[profile.profile10]
inherits = "release-base"
opt-level = "z"
codegen-units = 1
lto = true
strip = true
panic = "abort"

[profile.profile11]
inherits = "release-base"
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"

[profile.profile10-nostrip]
inherits = "profile10"
strip = false

# Optimise libstd: https://github.com/johnthagen/min-sized-rust?tab=readme-ov-file#optimize-libstd-with-build-std
# Compress the binary (not library?): https://github.com/johnthagen/min-sized-rust?tab=readme-ov-file#compress-the-binary

# Questions:
# What flags cause crash in prod Swift?
# Can we use strip=true? Kotlin previously removed
# Can we use panic=abort? I think for now we shouldn't due to incomplete error handling coverage, but we should in the future

# [patch."https://github.com/reown-com/erc6492.git"]
# erc6492 = { path = "../../WalletConnect/erc6492-rs" }

[patch.crates-io]
alloy = { git = "https://github.com/alloy-rs/alloy.git", rev = "5dcdf0f" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy.git", rev = "5dcdf0f" }
