[workspace]
members = ["crates/kotlin-ffi", "crates/pay-api", "crates/rust-sample-wallet", "crates/yttrium"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "Apache-2.0"

[workspace.dependencies]
# Errors/Result
eyre = { version = "0.6.12", features = ["default"], default-features = false }
thiserror = { version = "1.0", default-features = false }

# Async
tokio = { version = "1.48.0", default-features = false }
tokio-util = { version = "0.7.16", default-features = false }
futures = { version = "0.3.31", default-features = false }

wasmtimer = { version = "0.4.1", default-features = false, features = [
    "tokio",
] }

# Networking
reqwest = { version = "0.12.5", features = ["json"], default-features = false }
url = { version = "2.5.4", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false }

# Logging
oslog = { version = "0.2.0", default-features = false }
log = { version = "0.4.20", default-features = false }

alloy = { version = "1.7.3", default-features = false }
alloy-provider = { version = "1.1.3", default-features = false }
erc6492 = { git = "https://github.com/reown-com/erc6492.git", rev = "5e4580a", default-features = false }
relay_rpc = { git = "https://github.com/WalletConnect/WalletConnectRust.git", rev = "b2ebad0", default-features = false }

# Sign Client
tokio-tungstenite = { version = "0.27.0", default-features = false }
web-sys = { version = "0.3.77", default-features = false }
chacha20poly1305 = { version = "0.11.0-pre.2", default-features = false }

serial_test = { version = "3.2.0", default-features = false }

uniffi_build = { version = "0.31.0", default-features = false }
uniffi = { version = "0.31.0", default-features = false, features = ["tokio"] }

# API client generation
progenitor = { version = "0.9.1", default-features = false, features = ["macro"] }
progenitor-client = { version = "0.9.1", default-features = false }
uniffi_macros = { version = "0.31.0", default-features = false }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
tsify-next = "0.5.4"
serde-wasm-bindgen = "0.6"

# Solana
solana-sdk = { version = "3.0.0", default-features = false }
solana-client = { version = "3.1.4", default-features = false }
solana-seed-phrase = { version = "3.0.0", default-features = false }
solana-seed-derivable = { version = "3.0.0", default-features = false }
solana-transaction = { version = "3.0.2", default-features = false }
solana-signature = { version = "3.1.0", default-features = false }
solana-signer = { version = "3.0.0", default-features = false }
solana-keypair = { version = "3.1.0", default-features = false }
solana-derivation-path = { version = "3.0.0", default-features = false }
solana-commitment-config = { version = "3.0.0", default-features = false }
solana-system-interface = { version = "3.0.0", default-features = false }
spl-token = { version = "9.0.0", default-features = false }
spl-associated-token-account = { version = "8.0.0", default-features = false }
bincode = { version = "1.3.3", default-features = false }
data-encoding = { version = "2.9.0", default-features = false }
# Pin quinn to fix rustls-platform-verifier issue: https://github.com/rustls/rustls-platform-verifier/issues/164#issuecomment-2732380093
quinn = { version = "0.11.8", default-features = false }
const_format = { version = "0.2.35", default-features = false }

# SUI
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk", rev = "f9c8d50", default-features = false }
sui_types = { git = "https://github.com/mystenlabs/sui", package = "sui-types",rev = "f9c8d50", default-features = false }
sui_keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys",rev = "f9c8d50", default-features = false }
sui_shared_crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto",rev = "f9c8d50", default-features = false }
# https://github.com/MystenLabs/sui/blob/7214872434b3b0578fccc4d3e468371855a4ecf8/Cargo.toml#L624C1-L624C116
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "16fa86d0dd943024a9088d46850a72ecd55b7f46", default-features = false }
rand = { version = "0.9.2", default-features = false }
bcs = { version = "0.1.4", default-features = false }
tiny-bip39 = { version = "1.0.0", default-features = false }

# Stacks
stacks-rs = { version = "0.3.3", default-features = false }
bip32 = { version = "0.5.1", default-features = false }
stacks_secp256k1 = { version = "0.28.2", package = "secp256k1", default-features = false, features = ["recovery"] }

# TRON
bs58 = { version = "0.5", default-features = false, features = ["check"] }
tiny-keccak = { version = "2.0", default-features = false, features = ["keccak"] }
sha2 = { version = "0.10", default-features = false }

# Used by WASM ONLY, since wasm-pack doesn't support custom profiles
# https://github.com/rustwasm/wasm-pack/issues/1461
[profile.release]
lto = true        # Seems to make it slightly larger actually
opt-level = 'z'
codegen-units = 1
strip = true

# Default according to https://doc.rust-lang.org/cargo/reference/profiles.html#release
# We would inherit from the real release profile, but wasm-pack needs to use this above and we need to customize it
[profile.release-base]
inherits = "release"
opt-level = 3
debug = false
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.kotlin-release-next]
inherits = "profile10-nostrip"

[profile.swift-release-next]
inherits = "profile9"

# [profile.wasm-release-next]
# inherits = "profile10-nostrip"

# For building release-optimized binaries for UniFFI bindings
[profile.uniffi-release]
inherits = "uniffi-release-v1"

[profile.uniffi-release-v2] # Simply turns off debugging
inherits = "uniffi-release-v1"
debug = false

# TODO: consider more profiles for Kotlin vs Swift, and for Flutter, etc.

[profile.uniffi-release-v1]
# The values have been configured this way to prevent crashes in Swift debug builds with the default settings.
inherits = "release-base"
debug = true
lto = true
opt-level = 0
codegen-units = 1
# panic = "abort"
# strip = true - it removes kotlin-bindings

# What we should aim for short-term
[profile.uniffi-release-next]
inherits = "profile8"
# profile7-nightly-stdopt

[profile.uniffi-release-kotlin]
inherits = "profile11"

[profile.uniffi-release-kotlin-wcpay]
inherits = "profile11-wcpay"

[profile.uniffi-release-swift]
inherits = "profile9"

# Profile for iOS XCFramework builds with -Z build-std to eliminate rust_eh_personality symbols
# This prevents duplicate symbol conflicts when other Rust libraries are present in the same iOS project
# Use with: RUSTFLAGS="-Zunstable-options -Cpanic=immediate-abort" cargo +nightly build --profile=xcframework-release -Z build-std=std,panic_abort
# The panic=immediate-abort strategy completely eliminates all panic handling code
[profile.xcframework-release]
inherits = "release-base"
opt-level = 3
codegen-units = 1
lto = true
strip = true
panic = "abort"

[profile.uniffi-release-iter1] # first iteration, changes opt-level to 3
inherits = "release-base"
debug = true
lto = true
opt-level = 3
codegen-units = 1

[profile.uniffi-release-iter2] # same as profile6
inherits = "release-base"
lto = true
opt-level = 3
codegen-units = 1

[profile.uniffi-release-iter3] # same as profile7
inherits = "release-base"
lto = true
opt-level = 3
codegen-units = 1
strip = true

[profile.uniffi-release-iter4]
inherits = "release-base"
lto = true
opt-level = 3
codegen-units = 1
strip = true
# profile7-nightly

[profile.uniffi-release-iter5]
inherits = "release-base"
lto = true
opt-level = 3
codegen-units = 1
strip = true
# profile7-nightly-stdopt

[profile.profile1]
inherits = "release-base"
debug = true
opt-level = 0

[profile.profile2]
inherits = "release-base"
opt-level = 0

[profile.profile21]
inherits = "release-base"
opt-level = 1

[profile.profile22]
inherits = "release-base"
opt-level = 2

[profile.profile3]
inherits = "release-base"
opt-level = 3

[profile.profile4]
inherits = "release-base"
opt-level = "z"

[profile.profile5]
inherits = "release-base"
opt-level = 3
codegen-units = 1

[profile.profile6]
inherits = "release-base"
opt-level = 3
codegen-units = 1
lto = true

[profile.profile7]
inherits = "release-base"
opt-level = 3
codegen-units = 1
lto = true
strip = true

[profile.profile8]
inherits = "release-base"
opt-level = 3
codegen-units = 1
lto = true
panic = "abort"

[profile.profile9]
inherits = "release-base"
opt-level = 3
codegen-units = 1
lto = true
strip = true
panic = "abort"

[profile.profile10]
inherits = "release-base"
opt-level = "z"
codegen-units = 1
lto = true
strip = true
panic = "abort"

[profile.profile11]
inherits = "release-base"
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"

[profile.profile11-wcpay]
inherits = "profile11"
# Additional optimizations for wcpay variant
# Explicitly disable debug symbols for maximum size reduction
debug = false
# Note: strip = true is not set here as it removes UniFFI bindings
# Manual stripping with llvm-strip --strip-all is performed after build

[profile.profile10-nostrip]
inherits = "profile10"
strip = false

# Optimise libstd: https://github.com/johnthagen/min-sized-rust?tab=readme-ov-file#optimize-libstd-with-build-std
# Compress the binary (not library?): https://github.com/johnthagen/min-sized-rust?tab=readme-ov-file#compress-the-binary

# Questions:
# What flags cause crash in prod Swift?
# Can we use strip=true? Kotlin previously removed
# Can we use panic=abort? I think for now we shouldn't due to incomplete error handling coverage, but we should in the future

# [patch."https://github.com/reown-com/erc6492.git"]
# erc6492 = { path = "../../reown-com/erc6492" }
