[package]
name = "dart-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "dart_ffi"
path = "."
crate-type = ["cdylib"]

[dependencies]
flutter_rust_bridge = "=1.82.6"
flutter_rust_bridge_codegen = "=1.82.6"

[build-dependencies]
