[package]
name = "dart-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "dart_ffi"
crate-type = ["cdylib"]

[dependencies]
flutter_rust_bridge = "2.6.0"
flutter_rust_bridge_codegen = "2.6.0"
yttrium = { path = "../yttrium" }
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "e796e00ad150f8b14b61a859a2e8c6497b35074e", features = [
  "tokio",
  "cli",
] }
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9.103", features = ["vendored"] }
relay_rpc = { git = "https://github.com/WalletConnect/WalletConnectRust.git" }
alloy.workspace = true

# Errors
eyre.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Networking
reqwest.workspace = true

# Logging
log.workspace = true
thiserror.workspace = true

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[package.metadata.cargo-udeps.ignore]
# These crates are needed for Linux builds, but will give unused deps error when built on macOS
normal = ["openssl", "openssl-sys"]
