[package]
name = "ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib"]

[build-dependencies]
swift-bridge-build = { git = "https://github.com/wooden-worm/swift-bridge.git", branch = "derive_debug_serde" }

[dependencies]
# See: https://github.com/kornelski/rust-security-framework/pull/204
# security-framework = "2.10.0"

swift-bridge = { git = "https://github.com/wooden-worm/swift-bridge.git", branch = "derive_debug_serde", features = [
    "async",
] }
yttrium = { path = "../yttrium" }
erc6492 = { git = "https://github.com/reown-com/erc6492.git" }
alloy = { version = "0.3.6" }

# Errors
eyre.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Networking
reqwest.workspace = true

# Logging
log.workspace = true

[target.'cfg(target_os = "ios")'.dependencies]
oslog.workspace = true
