[package]
name = "rust-sample-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-subscriber-wasm = "0.1.0"
leptos = { version = "0.8.5", features = ["csr"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
yttrium = { path = "../yttrium", default-features = false, features = [
    "wasm",
    "sign_client",
] }
web-sys = { version = "0.3.77", features = ["Window", "Storage"] }
thaw = { git = "https://github.com/thaw-ui/thaw", branch = "thaw/v0.5", features = ["csr"] }
