[package]
name = "yttrium"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
# name = "yttrium_dart"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["erc6492_client", "chain_abstraction_client"]
full = ["all_platforms", "all_clients"]

# Features enabling FFI bindings for different platforms
all_platforms = ["uniffi", "frb", "wasm"]
uniffi = ["dep:uniffi", "dep:uniffi_macros"]
frb = ["dep:flutter_rust_bridge_codegen", "dep:flutter_rust_bridge"]
wasm = [
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "alloy/wasm-bindgen",
    "dep:tsify-next",
]

# Features contributing to bundle size, that you might not need
all_clients = ["account_client", "erc6492_client", "chain_abstraction_client", "transaction_sponsorship_client"]
account_client = []
erc6492_client = []
chain_abstraction_client = []
transaction_sponsorship_client = []

# Features enabling test coverage
test_pimlico_api = []
test_blockchain_api = []

[build-dependencies]
flutter_rust_bridge_codegen = { workspace = true, optional = true }

[dependencies]
flutter_rust_bridge = { workspace = true, optional = true }

uniffi = { workspace = true, optional = true }
uniffi_macros = { workspace = true, optional = true }

wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
tsify-next = { workspace = true, optional = true, features = ["js"] }

# Ethereum
alloy = { workspace = true, features = [
    "contract",
    "network",
    "providers",
    "node-bindings",
    "rpc-types-trace",
    "signer-mnemonic",
    "eip712",
    "rlp",
] }
alloy-provider = { workspace = true, features = ["erc4337-api"] }
erc6492.workspace = true
relay_rpc.workspace = true

# foundry-block-explorers = "0.2.3"
getrandom = { version = "0.2", features = ["js"], default-features = false }

# Error/Result
eyre.workspace = true
thiserror.workspace = true

# Async
tokio.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Env vars
dotenvy = { version = "0.15.7", default-features = false }

# Other
hex = { version = "0.4.3", features = ["std"], default-features = false }
async-trait = { version = "0.1.83", default-features = false }
tracing = { version = "0.1.40", default-features = false }
# fastlz-rs = { version = "0.0.3", features = ["std"], default-features = false }

# Networking
reqwest.workspace = true

[dev-dependencies]
# mocking
wiremock = { version = "0.6.0", default-features = false }

# Networking
reqwest.workspace = true
alloy = { workspace = true, features = ["node-bindings"] }
serial_test.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']
